# swarm-dev

./: .env.example  .gitignore  .pre-commit-config.yaml  .task_history.jsonl  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TECHNICAL_SPEC.md  install.sh  main.py  pyproject.toml  registry.json  requirements-dev.txt  requirements.txt  search.db  setup.sh  swarm
cli/: __init__.py  agents_cmd.py  chain_cmd.py  channels_cmd.py  chat.py  completions_cmd.py  config_cmd.py  cron_cmd.py  doctor_cmd.py  evolve_cmd.py  export_cmd.py  gateway_cmd.py  helpers.py  install_cmd.py  logs_cmd.py  memo_cmd.py  memory_cmd.py  plugins_cmd.py  security_cmd.py  status_cmd.py  usage_cmd.py  version_cmd.py  workflow_cmd.py
config/: agents.yaml  chain_contracts.json  exec_approvals.json
core/: agent.py  async_wrappers.py  compaction.py  completions.py  config_manager.py  config_schema.py  context_bus.py  cron.py  daemon.py  dashboard.html  doc_updater.py  doctor.py  env_loader.py  exec_tool.py  gateway.py  heartbeat.py  i18n.py  live_status.py  log_viewer.py  logging_config.py  onboard.py  orchestrator.py  plugin_cli.py  plugin_sdk.py  protocols.py  provider_router.py  skill_deps.py  skill_loader.py  skill_registry.py  subagent.py  task_board.py  task_history.py  task_router.py  team_skill.py  theme.py  tools.py  usage_tracker.py  wakeup.py  workflow.py  ws_gateway.py
docs/: ARCHITECTURE.md  Cleo_V0.01_Product_Logic.md  Cleo_V0.01_Product_Narrative.md  Cleo_V0.01_Technical_Architecture.md  cookbook.md
memory/: cron_jobs.json
reputation/: evolution.py  peer_review.py  scheduler.py  scorer.py  textgrad.py
scripts/: check_loc.py  deploy_erc8004.py  mint_naga_pkp.py
skills/: 1password.md  _base.md  _registry.json  _team.md  apple-notes.md  apple-reminders.md  bear-notes.md  blogwatcher.md  blucli.md  bluebubbles.md  camsnap.md  canvas.md  clawhub.md  coding-agent.md  (+44 more)
(+110 files in other folders)
